deduplication + option stub for recent publications per group

--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -1,243 +1,4 @@
 
-@inproceedings{DBLP:conf/bcb/MahadikTBM15,
-  title = {Do Specialized Distributed Frameworks for Bioinformatics Applications Obtain Better Performance over Generic Ones?},
-  booktitle = {Proceedings of the 6th {{ACM}} Conference on Bioinformatics, Computational Biology and Health Informatics, {{BCB}} 2015, Atlanta, {{GA}}, {{USA}}, September 9-12, 2015},
-  author = {Mahadik, Kanak and Tang, Wei and Bagchi, Saurabh and Meyer, Folker},
-  year = {2015},
-  pages = {538},
-  publisher = {{ACM}},
-  doi = {10.1145/2808719.2811452},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/bcb/MahadikTBM15.bib},
-  timestamp = {Tue, 06 Nov 2018 00:00:00 +0100}
-}
-
-@inproceedings{DBLP:conf/bdc/WilkeGHPTTWDM15,
-  title = {Shock: {{Active}} Storage for Multicloud Streaming Data Analysis},
-  booktitle = {2nd {{IEEE}}/{{ACM}} International Symposium on Big Data Computing, {{BDC}} 2015, Limassol, Cyprus, December 7-10, 2015},
-  author = {Wilke, Andreas and Gerlach, Wolfgang and Harrison, Travis and Paczian, Tobias and Tang, Wei and Trimble, William L. and Wilkening, Jared and Desai, Narayan and Meyer, Folker},
-  editor = {Raicu, Ioan and Rana, Omer F. and Buyya, Rajkumar},
-  year = {2015},
-  pages = {68--72},
-  publisher = {{IEEE Computer Society}},
-  doi = {10.1109/BDC.2015.40},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/bdc/WilkeGHPTTWDM15.bib},
-  timestamp = {Wed, 16 Oct 2019 14:14:54 +0200}
-}
-
-@inproceedings{DBLP:conf/bigdataconf/TangBDMGHWM14,
-  title = {Workload Characterization for {{MG-RAST}} Metagenomic Data Analytics Service in the Cloud},
-  booktitle = {2014 {{IEEE}} International Conference on Big Data ({{IEEE BigData}} 2014), Washington, {{DC}}, {{USA}}, October 27-30, 2014},
-  author = {Tang, Wei and Bischof, Jared and Desai, Narayan and Mahadik, Kanak and Gerlach, Wolfgang and Harrison, Travis and Wilke, Andreas and Meyer, Folker},
-  editor = {Lin, Jimmy and Pei, Jian and Hu, Xiaohua and Chang, Wo and Nambiar, Raghunath and Aggarwal, Charu C. and Cercone, Nick and Honavar, Vasant G. and Huan, Jun and Mobasher, Bamshad and Pyne, Saumyadipta},
-  year = {2014},
-  pages = {56--63},
-  publisher = {{IEEE Computer Society}},
-  doi = {10.1109/BigData.2014.7004394},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/bigdataconf/TangBDMGHWM14.bib},
-  timestamp = {Fri, 19 Nov 2021 16:08:20 +0100}
-}
-
-@inproceedings{DBLP:conf/bigdataconf/TangWDGWM13,
-  title = {A Scalable Data Analysis Platform for Metagenomics},
-  booktitle = {2013 {{IEEE}} International Conference on Big Data ({{IEEE BigData}} 2013), 6-9 October 2013, Santa Clara, {{CA}}, {{USA}}},
-  author = {Tang, Wei and Wilkening, Jared and Desai, Narayan and Gerlach, Wolfgang and Wilke, Andreas and Meyer, Folker},
-  editor = {Hu, Xiaohua and Lin, Tsau Young and Raghavan, Vijay V. and Wah, Benjamin W. and {Baeza-Yates}, Ricardo and Fox, Geoffrey C. and Shahabi, Cyrus and Smith, Matthew and Yang, Qiang and Ghani, Rayid and Fan, Wei and Lempel, Ronny and Nambiar, Raghunath},
-  year = {2013},
-  pages = {21--26},
-  publisher = {{IEEE Computer Society}},
-  doi = {10.1109/BigData.2013.6691723},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/bigdataconf/TangWDGWM13.bib},
-  timestamp = {Fri, 19 Nov 2021 16:08:20 +0100}
-}
-
-@inproceedings{DBLP:conf/biostec/LarsenCMG11,
-  title = {Predicted Relative Metabolomic Turnover - Predicting Changes in the Environmental Metabolome from the Metagenome},
-  booktitle = {{{BIOINFORMATICS}} 2011 - Proceedings of the International Conference on Bioinformatics Models, Methods and Algorithms, Rome, Italy, 26-29 January, 2011},
-  author = {Larsen, Peter E. and Collart, Frank and Meyer, Folker and Gilbert, Jack A.},
-  editor = {Pellegrini, Marco and Fred, Ana L. N. and Filipe, Joaquim and Gamboa, Hugo},
-  year = {2011},
-  pages = {337--345},
-  publisher = {{SciTePress}},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/biostec/LarsenCMG11.bib},
-  timestamp = {Thu, 21 Dec 2017 16:21:33 +0100}
-}
-
-@inproceedings{DBLP:conf/biostec/MeyerK11,
-  title = {Proposal for Open Discussion - Informatics Challenges for next Generation Sequencing Metagenomics Experiments},
-  booktitle = {{{BIOINFORMATICS}} 2011 - Proceedings of the International Conference on Bioinformatics Models, Methods and Algorithms, Rome, Italy, 26-29 January, 2011},
-  author = {Meyer, Folker and Kyrpides, Nikos},
-  editor = {Pellegrini, Marco and Fred, Ana L. N. and Filipe, Joaquim and Gamboa, Hugo},
-  year = {2011},
-  pages = {363--366},
-  publisher = {{SciTePress}},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/biostec/MeyerK11.bib},
-  timestamp = {Thu, 28 Feb 2013 00:00:00 +0100}
-}
-
-@inproceedings{DBLP:conf/cloudcom/TangJMRKWYLD14,
-  title = {Data-Aware Resource Scheduling for Multicloud Workflows: {{A}} Fine-Grained Simulation Approach},
-  booktitle = {{{IEEE}} 6th International Conference on Cloud Computing Technology and Science, {{CloudCom}} 2014, Singapore, December 15-18, 2014},
-  author = {Tang, Wei and Jenkins, Jonathan and Meyer, Folker and Ross, Robert B. and Kettimuthu, Rajkumar and Winkler, Linda and Yang, Xi and Lehman, Thomas and Desai, Narayan},
-  year = {2014},
-  pages = {887--892},
-  publisher = {{IEEE Computer Society}},
-  doi = {10.1109/CloudCom.2014.19},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/cloudcom/TangJMRKWYLD14.bib},
-  timestamp = {Wed, 16 Oct 2019 14:14:56 +0200}
-}
-
-@inproceedings{DBLP:conf/cluster/WilkeningWDM09,
-  title = {Using Clouds for Metagenomics: {{A}} Case Study},
-  booktitle = {Proceedings of the 2009 {{IEEE}} International Conference on Cluster Computing, August 31 - September 4, 2009, New Orleans, Louisiana, {{USA}}},
-  author = {Wilkening, Jared and Wilke, Andreas and Desai, Narayan and Meyer, Folker},
-  year = {2009},
-  pages = {1--6},
-  publisher = {{IEEE Computer Society}},
-  doi = {10.1109/CLUSTR.2009.5289187},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/cluster/WilkeningWDM09.bib},
-  timestamp = {Wed, 16 Oct 2019 14:14:57 +0200}
-}
-
-@inproceedings{DBLP:conf/cogmi/SchmidtSBNASM21,
-  title = {Towards a Trustworthy, Secure and Reliable Enclave for Machine Learning in a Hospital Setting: {{The Essen Medical Computing Platform}} ({{EMCP}})},
-  booktitle = {Third {{IEEE}} International Conference on Cognitive Machine Intelligence, {{CogMI}} 2021, Atlanta, {{GA}}, {{USA}}, December 13-15, 2021},
-  author = {Schmidt, Hendrik F. R. and Schl{\"o}tterer, J{\"o}rg and Bargull, Marcel and Nasca, Enrico and Aydelott, Ryan and Seifert, Christin and Meyer, Folker},
-  year = {2021},
-  pages = {116--123},
-  publisher = {{IEEE}},
-  doi = {10.1109/CogMI52975.2021.00023},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/cogmi/SchmidtSBNASM21.bib},
-  timestamp = {Wed, 20 Apr 2022 16:01:05 +0200}
-}
-
-@inproceedings{DBLP:conf/comsnets/MahgoubGMGC17,
-  title = {Suitability of {{NoSQL}} Systems - Cassandra and {{ScyllaDB}} - for {{IoT}} Workloads},
-  booktitle = {9th International Conference on Communication Systems and Networks, {{COMSNETS}} 2017, Bengaluru, India, January 4-8, 2017},
-  author = {Mahgoub, Ashraf and Ganesh, Sachandhan and Meyer, Folker and Grama, Ananth and Chaterji, Somali},
-  year = {2017},
-  pages = {476--479},
-  publisher = {{IEEE}},
-  doi = {10.1109/COMSNETS.2017.7945437},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/comsnets/MahgoubGMGC17.bib},
-  timestamp = {Wed, 16 Oct 2019 14:14:51 +0200}
-}
-
-@inproceedings{DBLP:conf/ic2e/GerlachTWOM15,
-  title = {Container Orchestration for Scientific Workflows},
-  booktitle = {2015 {{IEEE}} International Conference on Cloud Engineering, {{IC2E}} 2015, Tempe, {{AZ}}, {{USA}}, March 9-13, 2015},
-  author = {Gerlach, Wolfgang and Tang, Wei and Wilke, Andreas and Olson, Dan and Meyer, Folker},
-  year = {2015},
-  pages = {377--378},
-  publisher = {{IEEE Computer Society}},
-  doi = {10.1109/IC2E.2015.87},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/ic2e/GerlachTWOM15.bib},
-  timestamp = {Wed, 16 Oct 2019 14:14:54 +0200}
-}
-
-@inproceedings{DBLP:conf/ismb/GiegerichMS96,
-  title = {{{GeneFisher-Software}} Support for the Detection of Postulated Genes},
-  booktitle = {Proceedings of the Fourth International Conference on Intelligent Systems for Molecular Biology, St. {{Louis}}, {{MO}}, {{USA}}, June 12-15 1996},
-  author = {Giegerich, Robert and Meyer, Folker and Schleiermacher, Chris},
-  editor = {States, David J. and Agarwal, Pankaj and Gaasterland, Terry and Hunter, Lawrence and Smith, Randall},
-  year = {1996},
-  pages = {68--77},
-  publisher = {{AAAI}},
-  url = {http://www.aaai.org/Library/ISMB/1996/ismb96-008.php},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/ismb/GiegerichMS96.bib},
-  timestamp = {Thu, 13 Dec 2012 00:00:00 +0100}
-}
-
-@inproceedings{DBLP:conf/ismb/KrauseDBEPRMS06,
-  title = {Finding Novel Genes in Bacterial Communities Isolated from the Environment},
-  booktitle = {Proceedings 14th International Conference on Intelligent Systems for Molecular Biology 2006, Fortaleza, Brazil, August 6-10, 2006},
-  author = {Krause, Lutz and Diaz, Naryttza N. and Bartels, Daniela and Edwards, Robert A. and P{\"u}hler, Alfred and Rohwer, Forest and Meyer, Folker and Stoye, Jens},
-  year = {2006},
-  pages = {281--289},
-  doi = {10.1093/bioinformatics/btl247},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/ismb/KrauseDBEPRMS06.bib},
-  timestamp = {Thu, 14 Oct 2021 01:00:00 +0200}
-}
-
-@inproceedings{DBLP:conf/ismb/StoyeEM97,
-  title = {Generating Benchmarks for Multiple Sequence Alignments and Phylogenic Reconstructions},
-  booktitle = {Proceedings of the 5th International Conference on Intelligent Systems for Molecular Biology, Halkidiki, Greece, June 21-26, 1997},
-  author = {Stoye, Jens and Evers, Dirk and Meyer, Folker},
-  editor = {Gaasterland, Terry and Karp, Peter D. and Karplus, Kevin and Ouzounis, Christos A. and Sander, Chris and Valencia, Alfonso},
-  year = {1997},
-  pages = {303--306},
-  publisher = {{AAAI}},
-  url = {http://www.aaai.org/Library/ISMB/1997/ismb97-046.php},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/ismb/StoyeEM97.bib},
-  timestamp = {Thu, 13 Dec 2012 00:00:00 +0100}
-}
-
-@inproceedings{DBLP:conf/middleware/MahgoubWGMGHMGB17,
-  title = {Rafiki: A Middleware for Parameter Tuning of {{NoSQL}} Datastores for Dynamic Metagenomics Workloads},
-  booktitle = {Proceedings of the 18th {{ACM}}/{{IFIP}}/{{USENIX}} Middleware Conference, Las Vegas, {{NV}}, {{USA}}, December 11 - 15, 2017},
-  author = {Mahgoub, Ashraf and Wood, Paul and Ganesh, Sachandhan and Mitra, Subrata and Gerlach, Wolfgang and Harrison, Travis and Meyer, Folker and Grama, Ananth and Bagchi, Saurabh and Chaterji, Somali},
-  editor = {Jayaram, K. R. and Gandhi, Anshul and Kemme, Bettina and Pietzuch, Peter R.},
-  year = {2017},
-  pages = {28--40},
-  publisher = {{ACM}},
-  doi = {10.1145/3135974.3135991},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/middleware/MahgoubWGMGHMGB17.bib},
-  timestamp = {Tue, 06 Nov 2018 16:57:13 +0100}
-}
-
-@inproceedings{DBLP:conf/pads/RossMJCCRTGM16,
-  title = {A Case Study in Using Discrete-Event Simulation to Improve the Scalability of {{MG-RAST}}},
-  booktitle = {Proceedings of the 2016 Annual {{ACM}} Conference on {{SIGSIM}} Principles of Advanced Discrete Simulation, {{SIGSIM-PADS}} 2016, Banff, Alberta, Canada, May 15-18, 2016},
-  author = {Ross, Caitlin and Mubarak, Misbah and Jenkins, John and Carns, Philip H. and Carothers, Christopher D. and Ross, Robert B. and Tang, Wei and Gerlach, Wolfgang and Meyer, Folker},
-  editor = {Fujimoto, Richard and Unger, Brian W. and Carothers, Christopher D.},
-  year = {2016},
-  pages = {211--220},
-  publisher = {{ACM}},
-  doi = {10.1145/2901378.2901387},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/pads/RossMJCCRTGM16.bib},
-  timestamp = {Thu, 14 Oct 2021 01:00:00 +0200}
-}
-
-@inproceedings{DBLP:conf/ro/MeyerFGMHW18,
-  title = {On the Way to Research Objects for Environmental Genomics (or Metagenomics)},
-  booktitle = {Proceedings of Workshop on Research Objects ({{RO2018}}), Amsterdam, the Netherlands, October 29, 2018},
-  author = {Meyer, Folker and Finn, Robert D. and Gerlach, Wolfgang and Mitchell, Alex L. and Harrison, Travis and Wilke, Andreas},
-  year = {2018},
-  doi = {10.5281/zenodo.1309962},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/ro/MeyerFGMHW18.bib},
-  timestamp = {Wed, 09 Oct 2019 10:24:55 +0200}
-}
-
-@inproceedings{DBLP:conf/sc/GerlachTKHWBDDM14,
-  title = {Skyport: Container-Based Execution Environment Management for Multi-Cloud Scientific Workflows},
-  booktitle = {Proceedings of the 5th International Workshop on Data-Intensive Computing in the Clouds, {{DataCloud}} '14, New Orleans, Louisiana, {{USA}}, November 16-21, 2014},
-  author = {Gerlach, Wolfgang and Tang, Wei and Keegan, Kevin P. and Harrison, Travis and Wilke, Andreas and Bischof, Jared and D'Souza, Mark and Devoid, Scott and {Murphy-Olson}, Daniel E. and Desai, Narayan and Meyer, Folker},
-  editor = {Tang, Wei and Zhao, Yong and Zheng, Ziming},
-  year = {2014},
-  pages = {25--32},
-  publisher = {{IEEE}},
-  doi = {10.1109/DataCloud.2014.6},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/sc/GerlachTKHWBDDM14.bib},
-  timestamp = {Wed, 04 Dec 2019 00:00:00 +0100}
-}
-
 @inproceedings{DBLP:conf/usenix/MahgoubWMMMCB19,
   title = {{{SOPHIA}}: {{Online}} Reconfiguration of Clustered {{NoSQL}} Databases for Time-Varying Workloads},
   booktitle = {2019 {{USENIX}} Annual Technical Conference, {{USENIX ATC}} 2019, Renton, {{WA}}, {{USA}}, July 10-12, 2019},
@@ -280,88 +41,6 @@
   timestamp = {Thu, 04 Jun 2020 01:00:00 +0200}
 }
 
-@article{DBLP:journals/bioinformatics/BartelsKADGHKPPRSMS05,
-  title = {{{BACCardI-a}} Tool for the Validation of Genomic Assemblies, Assisting Genome Finishing and Intergenome Comparison},
-  author = {Bartels, Daniela and Kespohl, Sebastian and Albaum, Stefan P. and Dr{\"u}ke, Tanja and Goesmann, Alexander and Herold, Julia and Kaiser, Olaf and P{\"u}hler, Alfred and Pfeiffer, Friedhelm and Raddatz, G{\"u}nter and Stoye, Jens and Meyer, Folker and Schuster, Stephan C.},
-  year = {2005},
-  journal = {Bioinform.},
-  volume = {21},
-  number = {7},
-  pages = {853--859},
-  doi = {10.1093/bioinformatics/bti091},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/bioinformatics/BartelsKADGHKPPRSMS05.bib},
-  timestamp = {Mon, 02 Mar 2020 00:00:00 +0100}
-}
-
-@article{DBLP:journals/bioinformatics/GoesmannHMKG02,
-  title = {{{PathFinder}}: Reconstruction and Dynamic Visualization of Metabolic Pathways},
-  author = {Goesmann, Alexander and Haubrock, Martin and Meyer, Folker and Kalinowski, J{\"o}rn and Giegerich, Robert},
-  year = {2002},
-  journal = {Bioinform.},
-  volume = {18},
-  number = {1},
-  pages = {124--129},
-  doi = {10.1093/bioinformatics/18.1.124},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/bioinformatics/GoesmannHMKG02.bib},
-  timestamp = {Mon, 02 Mar 2020 00:00:00 +0100}
-}
-
-@article{DBLP:journals/bioinformatics/McHardyGPM04,
-  title = {Development of Joint Application Strategies for Two Microbial Gene Finders},
-  author = {McHardy, Alice Carolyn and Goesmann, Alexander and P{\"u}hler, Alfred and Meyer, Folker},
-  year = {2004},
-  journal = {Bioinform.},
-  volume = {20},
-  number = {10},
-  pages = {1622--1631},
-  doi = {10.1093/bioinformatics/bth137},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/bioinformatics/McHardyGPM04.bib},
-  timestamp = {Mon, 02 Mar 2020 00:00:00 +0100}
-}
-
-@article{DBLP:journals/bioinformatics/StoyeEM98,
-  title = {Rose: Generating Sequence Families},
-  author = {Stoye, Jens and Evers, Dirk and Meyer, Folker},
-  year = {1998},
-  journal = {Bioinform.},
-  volume = {14},
-  number = {2},
-  pages = {157--163},
-  doi = {10.1093/bioinformatics/14.2.157},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/bioinformatics/StoyeEM98.bib},
-  timestamp = {Mon, 02 Mar 2020 00:00:00 +0100}
-}
-
-@article{DBLP:journals/bmcbi/MeyerPDOGKPRSWWE08,
-  title = {The Metagenomics {{RAST}} Server - a Public Resource for the Automatic Phylogenetic and Functional Analysis of Metagenomes},
-  author = {Meyer, Folker and Paarmann, Daniel and D'Souza, Mark and Olson, Robert and Glass, Elizabeth M. and Kubal, Michael and Paczian, Tobias and Rodriguez, Alexis A. and Stevens, Rick and Wilke, Andreas and Wilkening, Jared and Edwards, Robert A.},
-  year = {2008},
-  journal = {BMC Bioinform.},
-  volume = {9},
-  doi = {10.1186/1471-2105-9-386},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/bmcbi/MeyerPDOGKPRSWWE08.bib},
-  timestamp = {Mon, 26 Oct 2020 00:00:00 +0100}
-}
-
-@article{DBLP:journals/bmcbi/MitraRRUGMWH11,
-  title = {Functional Analysis of Metagenomes and Metatranscriptomes Using {{SEED}} and {{KEGG}}},
-  author = {Mitra, Suparna and Rupek, Paul and Richter, Daniel C. and Urich, Tim and Gilbert, Jack A. and Meyer, Folker and Wilke, Andreas and Huson, Daniel H.},
-  year = {2011},
-  journal = {BMC Bioinform.},
-  volume = {12},
-  number = {S-1},
-  pages = {S21},
-  doi = {10.1186/1471-2105-12-S1-S21},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/bmcbi/MitraRRUGMWH11.bib},
-  timestamp = {Thu, 14 Oct 2021 01:00:00 +0200}
-}
-
 @article{DBLP:journals/bmcbi/PaczianTGHWM19,
   title = {The {{MG-RAST API}} Explorer: An on-Ramp for {{RESTful}} Query Composition},
   author = {Paczian, Tobias and Trimble, William L. and Gerlach, Wolfgang and Harrison, Travis and Wilke, Andreas and Meyer, Folker},
@@ -376,139 +55,14 @@
   timestamp = {Sat, 30 May 2020 01:00:00 +0200}
 }
 
-@article{DBLP:journals/bmcbi/TrimbleKDWWGM12,
-  title = {Short-Read Reading-Frame Predictors Are Not Created Equal: Sequence Error Causes Loss of Signal},
-  author = {Trimble, William L. and Keegan, Kevin P. and D'Souza, Mark and Wilke, Andreas and Wilkening, Jared and Gilbert, Jack A. and Meyer, Folker},
-  year = {2012},
-  journal = {BMC Bioinform.},
-  volume = {13},
-  pages = {183},
-  doi = {10.1186/1471-2105-13-183},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/bmcbi/TrimbleKDWWGM12.bib},
-  timestamp = {Sun, 15 Mar 2020 00:00:00 +0100}
-}
-
-@article{DBLP:journals/bmcbi/WilkeHWFGKMM12,
-  title = {The {{M5nr}}: A Novel Non-Redundant Database Containing Protein Sequences and Annotations from Multiple Sources and Associated Tools},
-  author = {Wilke, Andreas and Harrison, Travis and Wilkening, Jared and Field, Dawn and Glass, Elizabeth M. and Kyrpides, Nikos and Mavrommatis, Konstantinos and Meyer, Folker},
-  year = {2012},
-  journal = {BMC Bioinform.},
-  volume = {13},
-  pages = {141},
-  doi = {10.1186/1471-2105-13-141},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/bmcbi/WilkeHWFGKMM12.bib},
-  timestamp = {Sun, 15 Mar 2020 00:00:00 +0100}
-}
-
-@article{DBLP:journals/concurrency/WilkeWGDM11,
-  title = {An Experience Report: Porting the {{MG-RAST}} Rapid Metagenomics Analysis Pipeline to the Cloud},
-  author = {Wilke, Andreas and Wilkening, Jared and Glass, Elizabeth M. and Desai, Narayan and Meyer, Folker},
-  year = {2011},
-  volume = {23},
-  number = {17},
-  pages = {2250--2257},
-  doi = {10.1002/cpe.1799},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/concurrency/WilkeWGDM11.bib},
-  timestamp = {Mon, 02 Mar 2020 00:00:00 +0100}
-}
-
-@article{DBLP:journals/corr/abs-2201-04816,
+@inproceedings{schmidtTrustworthySecureReliable2021,
   title = {Towards a Trustworthy, Secure and Reliable Enclave for Machine Learning in a Hospital Setting: {{The Essen Medical Computing Platform}} ({{EMCP}})},
+  booktitle = {Third {{IEEE}} International Conference on Cognitive Machine Intelligence, {{CogMI}} 2021, Atlanta, {{GA}}, {{USA}}, December 13-15, 2021},
   author = {Schmidt, Hendrik F. R. and Schl{\"o}tterer, J{\"o}rg and Bargull, Marcel and Nasca, Enrico and Aydelott, Ryan and Seifert, Christin and Meyer, Folker},
-  year = {2022},
-  journal = {CoRR},
-  volume = {abs/2201.04816},
-  eprint = {2201.04816},
-  eprinttype = {arxiv},
-  url = {https://arxiv.org/abs/2201.04816},
-  archiveprefix = {arXiv},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/corr/abs-2201-04816.bib},
-  timestamp = {Thu, 20 Jan 2022 00:00:00 +0100}
-}
-
-@article{DBLP:journals/nar/GoesmannLBDKNOPWM05,
-  title = {{{BRIGEP}} - the {{BRIDGE-based}} Genome-Transcriptome-Proteome Browser},
-  author = {Goesmann, Alexander and Linke, Burkhard and Bartels, Daniela and Dondrup, Michael and Krause, Lutz and Neuweger, Heiko and Oehm, Sebastian and Paczian, Tobias and Wilke, Andreas and Meyer, Folker},
-  year = {2005},
-  journal = {Nucleic Acids Research},
-  volume = {33},
-  number = {Web-Server-Issue},
-  pages = {710--716},
-  doi = {10.1093/nar/gki400},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/nar/GoesmannLBDKNOPWM05.bib},
-  timestamp = {Thu, 14 Oct 2021 01:00:00 +0200}
-}
-
-@article{DBLP:journals/nar/McNeilRABCDEGHKMMMOOOPPPPRSVVZXZOS07,
-  title = {The National Microbial Pathogen Database Resource ({{NMPDR}}): A Genomics Platform Based on Subsystem Annotation},
-  author = {McNeil, Leslie Klis and Reich, Claudia and Aziz, Ramy K. and Bartels, Daniela and Cohoon, Matthew and Disz, Terry and Edwards, Robert A. and Gerdes, Svetlana and Hwang, Kaitlyn and Kubal, Michael and Margaryan, Gohar Rem and Meyer, Folker and Mihalo, William and Olsen, Gary J. and Olson, Robert and Osterman, Andrei and Paarmann, Daniel and Paczian, Tobias and Parrello, Bruce D. and Pusch, Gordon D. and Rodionov, Dmitry A. and Shi, Xinghua and Vassieva, Olga and Vonstein, Veronika and Zagnitko, Olga and Xia, Fangfang and Zinner, Jenifer and Overbeek, Ross A. and Stevens, Rick},
-  year = {2007},
-  journal = {Nucleic Acids Research},
-  volume = {35},
-  number = {Database-Issue},
-  pages = {347--353},
-  doi = {10.1093/nar/gkl947},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/nar/McNeilRABCDEGHKMMMOOOPPPPRSVVZXZOS07.bib},
-  timestamp = {Mon, 26 Oct 2020 00:00:00 +0100}
-}
-
-@article{DBLP:journals/nar/WilkeBGGHKPTBGC16,
-  title = {The {{MG-RAST}} Metagenomics Database and Portal in 2015},
-  author = {Wilke, Andreas and Bischof, Jared and Gerlach, Wolfgang and Glass, Elizabeth M. and Harrison, Travis and Keegan, Kevin P. and Paczian, Tobias and Trimble, William L. and Bagchi, Saurabh and Grama, Ananth and Chaterji, Somali and Meyer, Folker},
-  year = {2016},
-  journal = {Nucleic Acids Research},
-  volume = {44},
-  number = {Database-Issue},
-  pages = {590--594},
-  doi = {10.1093/nar/gkv1322},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/nar/WilkeBGGHKPTBGC16.bib},
-  timestamp = {Sun, 17 May 2020 01:00:00 +0200}
-}
-
-@article{DBLP:journals/ploscb/AnglyWPESVABCDDFHHHKMMMMMNRSWZZR09,
-  title = {The {{GAAS}} Metagenomic Tool and Its Estimations of Viral and Microbial Average Genome Size in Four Major Biomes},
-  author = {Angly, Florent E. and Willner, Dana and {Prieto-Dav{\'o}}, Alejandra and Edwards, Robert A. and Schmieder, Robert and {Vega-Thurber}, Rebecca and Antonopoulos, Dionysios A. and Barott, Katie and Cottrell, Matthew T. and Desnues, Christelle and Dinsdale, Elizabeth A. and Furlan, Mike and Haynes, Matthew and Henn, Matthew R. and Hu, Yongfei and Kirchman, David L. and McDole, Tracey and McPherson, John D. and Meyer, Folker and Miller, R. Michael and Mundt, Egbert and Naviaux, Robert K. and {Rodriguez-Mueller}, Beltran and Stevens, Rick and Wegley, Linda and Zhang, Lixin and Zhu, Baoli and Rohwer, Forest},
-  year = {2009},
-  journal = {Plos Computational Biology},
-  volume = {5},
-  number = {12},
-  doi = {10.1371/journal.pcbi.1000593},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/ploscb/AnglyWPESVABCDDFHHHKMMMMMNRSWZZR09.bib},
-  timestamp = {Thu, 14 Oct 2021 01:00:00 +0200}
-}
-
-@article{DBLP:journals/ploscb/KeeganTWWHDM12,
-  title = {A Platform-Independent Method for Detecting Errors in Metagenomic Sequencing Data: {{DRISEE}}},
-  author = {Keegan, Kevin P. and Trimble, William L. and Wilkening, Jared and Wilke, Andreas and Harrison, Travis and D'Souza, Mark and Meyer, Folker},
-  year = {2012},
-  journal = {Plos Computational Biology},
-  volume = {8},
-  number = {6},
-  doi = {10.1371/journal.pcbi.1002541},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/ploscb/KeeganTWWHDM12.bib},
-  timestamp = {Thu, 10 Sep 2020 01:00:00 +0200}
-}
-
-@article{DBLP:journals/ploscb/WilkeBHBDGMPWGD15,
-  title = {A {{RESTful API}} for Accessing Microbial Community Data for {{MG-RAST}}},
-  author = {Wilke, Andreas and Bischof, Jared and Harrison, Travis and Brettin, Tom and D'Souza, Mark and Gerlach, Wolfgang and Matthews, Hunter and Paczian, Tobias and Wilkening, Jared and Glass, Elizabeth M. and Desai, Narayan and Meyer, Folker},
-  year = {2015},
-  journal = {Plos Computational Biology},
-  volume = {11},
-  number = {1},
-  doi = {10.1371/journal.pcbi.1004008},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/ploscb/WilkeBHBDGMPWGD15.bib},
-  timestamp = {Thu, 10 Sep 2020 01:00:00 +0200}
+  year = {2021},
+  pages = {116--123},
+  publisher = {{IEEE}},
+  doi = {10.1109/CogMI52975.2021.00023}
 }
 
 
