--- a/_bibliography/mcmi.bib
+++ b/_bibliography/mcmi.bib
@@ -176,7 +176,7 @@
 }
 
 @inproceedings{schmidtTrustworthySecureReliable2021,
-  title = {Towards a Trustworthy, Secure and Reliable Enclave for Machine Learning in a Hospital Setting: The {{Essen Medical Computing Platform}} ({{EMCP}})},
+  title = {Towards a Trustworthy, Secure and Reliable Enclave for Machine Learning in a Hospital Setting: {{The Essen Medical Computing Platform}} ({{EMCP}})},
   booktitle = {Proc. {{International Conference}} on {{Cognitive Machine Intelligence}}},
   author = {Schmidt, Hendrik and Schl{\"o}tterer, J{\"o}rg and Bargull, Marcell and Nasca, Enrico and Aydelott, Ryan and Seifert, Christin and Meyer, Folker},
   year = {2021},
