config scholar for author version pdfs + readme

--- a/_bibliography/kei.bib
+++ b/_bibliography/kei.bib
@@ -54,21 +54,7 @@
   doi = {10.1145/3503162.3503165}
 }
 
-@inproceedings{DBLP:conf/mod/JulkaSSG21,
-  title = {Conditional Generative Adversarial Networks for Speed Control in Trajectory Simulation},
-  booktitle = {Machine Learning, Optimization, and Data Science - 7th International Conference, {{LOD}} 2021, Grasmere, {{UK}}, October 4-8, 2021, Revised Selected Papers, Part {{II}}},
-  author = {Julka, Sahib and Sowrirajan, Vishal and Schloetterer, Joerg and Granitzer, Michael},
-  editor = {Nicosia, Giuseppe and Ojha, Varun and Malfa, Emanuele La and Malfa, Gabriele La and Jansen, Giorgio and Pardalos, Panos M. and Giuffrida, Giovanni and Umeton, Renato},
-  year = {2021},
-  series = {Lecture Notes in Computer Science},
-  volume = {13164},
-  pages = {436--450},
-  publisher = {{Springer}},
-  doi = {10.1007/978-3-030-95470-3\_33},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/mod/JulkaSSG21.bib},
-  timestamp = {Wed, 23 Feb 2022 00:00:00 +0100}
-}
+
 
 @inproceedings{DBLP:conf/tsd/LiuZSSW21,
   title = {Rewriting Fictional Texts Using Pivot Paraphrase Generation and Character Modification},
@@ -116,19 +102,20 @@
   timestamp = {Mon, 02 Mar 2020 00:00:00 +0100}
 }
 
-@article{DBLP:journals/corr/abs-2103-11471,
+@inproceedings{julkacga21,
   title = {Conditional Generative Adversarial Networks for Speed Control in Trajectory Simulation},
-  author = {Julka, Sahib and Sowrirajan, Vishal and Schl{\"o}tterer, J{\"o}rg and Granitzer, Michael},
+  booktitle = {Machine Learning, Optimization, and Data Science - 7th International Conference, {{LOD}} 2021, Grasmere, {{UK}}, October 4-8, 2021, Revised Selected Papers, Part {{II}}},
+  author = {Julka, Sahib and Sowrirajan, Vishal and Schloetterer, Joerg and Granitzer, Michael},
+  editor = {Nicosia, Giuseppe and Ojha, Varun and Malfa, Emanuele La and Malfa, Gabriele La and Jansen, Giorgio and Pardalos, Panos M. and Giuffrida, Giovanni and Umeton, Renato},
   year = {2021},
-  journal = {CoRR},
-  volume = {abs/2103.11471},
-  eprint = {2103.11471},
-  eprinttype = {arxiv},
-  url = {https://arxiv.org/abs/2103.11471},
-  archiveprefix = {arXiv},
+  series = {Lecture Notes in Computer Science},
+  volume = {13164},
+  pages = {436--450},
+  publisher = {{Springer}},
+  doi = {10.1007/978-3-030-95470-3\_33},
   bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/corr/abs-2103-11471.bib},
-  timestamp = {Thu, 14 Oct 2021 01:00:00 +0200}
+  biburl = {https://dblp.org/rec/conf/mod/JulkaSSG21.bib},
+  timestamp = {Wed, 23 Feb 2022 00:00:00 +0100}
 }
 
 @article{DBLP:journals/corr/abs-2201-08164,
